horizontal overflow resolved

--- a/src/navbar/index.css
+++ b/src/navbar/index.css
@@ -4,6 +4,7 @@
     display: flex;
     justify-content: center;
     background-color: rgba(0, 0, 0, 0.8);
+    max-width: 100%;
 }
 
 .navbar {
